set market=US to search song previews

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
+# Optional: market for preview URLs (ISO 3166-1 alpha-2, e.g. US, GB). Default US.
+# SPOTIFY_MARKET=US
+
 # Optional: backend port (default 3001)
 # PORT=3001
