added more environment features

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,14 @@
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 
+# Required for 30s previews: OAuth redirect. Add this exact URL in your Spotify app's Redirect URIs.
+# Local: http://127.0.0.1:3001/api/auth/callback
+# Vercel: https://YOUR-PROJECT.vercel.app/api/auth/callback
+SPOTIFY_REDIRECT_URI=
+
+# Where to send user after login (optional). Default: dev http://127.0.0.1:5173, Vercel uses VERCEL_URL
+# FRONTEND_URL=http://127.0.0.1:5173
+
 # Optional: market for preview URLs (ISO 3166-1 alpha-2, e.g. US, GB). Default US.
 # SPOTIFY_MARKET=US
 
